Imported index buffer setup in quad

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -195,7 +195,9 @@
     <ClInclude Include="Source\Engine\Application.h" />
     <ClInclude Include="Source\Engine\Graphics\ConstantBuffer.h" />
     <ClInclude Include="Source\Engine\Graphics\DeviceContext.h" />
+    <ClInclude Include="Source\Engine\Graphics\Material.h" />
     <ClInclude Include="Source\Engine\Graphics\PixelShader.h" />
+    <ClInclude Include="Source\Engine\Graphics\Primitives\Cube.h" />
     <ClInclude Include="Source\Engine\Graphics\Primitives\Quad.h" />
     <ClInclude Include="Source\Engine\Graphics\RenderSystem.h" />
     <ClInclude Include="Source\Engine\Graphics\SwapChain.h" />
@@ -216,7 +218,9 @@
     <ClCompile Include="Source\Engine\Application.cpp" />
     <ClCompile Include="Source\Engine\Graphics\ConstantBuffer.cpp" />
     <ClCompile Include="Source\Engine\Graphics\DeviceContext.cpp" />
+    <ClCompile Include="Source\Engine\Graphics\Material.cpp" />
     <ClCompile Include="Source\Engine\Graphics\PixelShader.cpp" />
+    <ClCompile Include="Source\Engine\Graphics\Primitives\Cube.cpp" />
     <ClCompile Include="Source\Engine\Graphics\Primitives\Quad.cpp" />
     <ClCompile Include="Source\Engine\Graphics\RenderSystem.cpp" />
     <ClCompile Include="Source\Engine\Graphics\SwapChain.cpp" />
