--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="Source\Engine\Graphics\Primitives\Cube.h" />
     <ClInclude Include="Source\Engine\Graphics\Primitives\Quad.h" />
     <ClInclude Include="Source\Engine\Graphics\RenderSystem.h" />
+    <ClInclude Include="Source\Engine\Graphics\ShaderLibrary.h" />
     <ClInclude Include="Source\Engine\Graphics\SwapChain.h" />
     <ClInclude Include="Source\Engine\Graphics\Vertex.h" />
     <ClInclude Include="Source\Engine\Graphics\VertexBuffer.h" />
@@ -223,6 +224,7 @@
     <ClCompile Include="Source\Engine\Graphics\Primitives\Cube.cpp" />
     <ClCompile Include="Source\Engine\Graphics\Primitives\Quad.cpp" />
     <ClCompile Include="Source\Engine\Graphics\RenderSystem.cpp" />
+    <ClCompile Include="Source\Engine\Graphics\ShaderLibrary.cpp" />
     <ClCompile Include="Source\Engine\Graphics\SwapChain.cpp" />
     <ClCompile Include="Source\Engine\Graphics\VertexBuffer.cpp" />
     <ClCompile Include="Source\Engine\Graphics\VertexShader.cpp" />
