--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=-138,570
 Size=550,680
+Collapsed=0
+
+[Window][Test Cube]
+Pos=60,60
+Size=274,82
+Collapsed=0
+
+[Window][Cubes]
+Pos=60,60
+Size=189,57
 Collapsed=0
 
