--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -14,7 +14,17 @@ Size=274,82
 Collapsed=0
 
 [Window][Cubes]
-Pos=60,60
+Pos=7,210
 Size=189,57
+Collapsed=0
+
+[Window][Cube Controls]
+Pos=47,262
+Size=349,117
+Collapsed=0
+
+[Window][Plane Controls]
+Pos=60,60
+Size=304,127
 Collapsed=0
 
