--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,12 +19,17 @@ Size=189,57
 Collapsed=0
 
 [Window][Cube Controls]
-Pos=47,262
+Pos=73,247
 Size=349,117
 Collapsed=0
 
 [Window][Plane Controls]
-Pos=95,65
+Pos=104,65
 Size=304,127
+Collapsed=0
+
+[Window][Camera Controls]
+Pos=50,463
+Size=290,100
 Collapsed=0
 
