--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=-138,570
-Size=550,680
-Collapsed=0
+Pos=484,120
+Size=550,516
+Collapsed=1
 
 [Window][Test Cube]
 Pos=60,60
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Camera Controls]
 Pos=50,463
 Size=290,100
+Collapsed=0
+
+[Window][Viewport]
+Pos=61,151
+Size=328,278
 Collapsed=0
 
