Mouse and Keyboard Controls

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -34,7 +34,12 @@ Size=290,100
 Collapsed=0
 
 [Window][Viewport]
-Pos=159,-40
-Size=340,576
+Pos=1138,38
+Size=124,33
+Collapsed=0
+
+[Window][Inspector]
+Pos=27,23
+Size=303,583
 Collapsed=0
 
