--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=484,120
-Size=550,516
-Collapsed=1
+Pos=944,8
+Size=306,658
+Collapsed=0
 
 [Window][Test Cube]
 Pos=60,60
@@ -39,7 +39,24 @@ Size=124,33
 Collapsed=0
 
 [Window][Inspector]
-Pos=27,23
-Size=303,583
+ViewportPos=272,294
+ViewportId=0xA4D966FE
+Size=302,675
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Demo]
+Size=1260,677
+Collapsed=0
+
+[Window][Example: Console]
+Pos=0,533
+Size=302,144
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=272,294 Size=302,675 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=302,529 Selected=0xE7039252
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=302,144 Selected=0xDE6E0C33
 
