--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,28 +1,58 @@
+[Window][DockSpaceViewport_11111111]
+Pos=0,19
+Size=1521,1027
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=326,238
-Size=550,680
-Collapsed=1
-
-[Window][Example: Console]
+[Window][Credits]
 Pos=60,60
-Size=520,600
-Collapsed=0
-
-[Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=1260,658
+Size=100,48
 Collapsed=0
 
 [Window][Testing]
-Pos=547,82
-Size=622,347
+Pos=559,19
+Size=519,508
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Testing1]
+Pos=0,529
+Size=1078,517
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Testing2]
+Pos=0,19
+Size=557,508
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Testing3]
+Pos=551,346
+Size=527,331
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Dear ImGui Demo]
+Pos=1489,19
+Size=32,1027
+Collapsed=0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=244,286 Size=1260,658 CentralNode=1
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=218,52 Size=1521,1027 Split=X
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1078,658 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=180,658 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=146,658 CentralNode=1
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=32,658 Selected=0xE87781F4
 
