--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -39,11 +39,9 @@ Size=124,33
 Collapsed=0
 
 [Window][Inspector]
-ViewportPos=80,96
-ViewportId=0xA4D966FE
-Size=302,675
+Pos=203,111
+Size=359,384
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Size=1260,677
@@ -53,10 +51,6 @@ Collapsed=0
 Pos=0,533
 Size=302,144
 Collapsed=0
-DockId=0x00000003,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=80,96 Size=302,675 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=302,529 Selected=0xE7039252
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=302,144 Selected=0xDE6E0C33
 
