Post processing initial

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1521,1027
+Size=1260,658
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,25 +9,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Credits]
-Pos=60,60
-Size=100,48
+Pos=0,401
+Size=198,276
 Collapsed=0
+DockId=0x00000012,0
 
 [Window][Testing]
 Pos=559,19
-Size=519,508
+Size=519,325
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Testing1]
-Pos=0,529
-Size=1078,517
+Pos=0,346
+Size=1078,331
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Testing2]
 Pos=0,19
-Size=557,508
+Size=557,325
 Collapsed=0
 DockId=0x00000008,0
 
@@ -38,21 +39,52 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Dear ImGui Demo]
-Pos=1489,19
-Size=32,1027
+Pos=994,550
+Size=212,38
+Collapsed=0
+
+[Window][Scene View]
+Pos=200,19
+Size=809,176
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Game View]
+Pos=200,197
+Size=809,446
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][World Outliner]
+Pos=0,19
+Size=198,380
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Properties]
+Pos=1011,19
+Size=249,658
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=218,52 Size=1521,1027 Split=X
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1078,658 Split=Y
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
-      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
-      DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
-      DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
-      DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
-  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=180,658 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=146,658 CentralNode=1
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=32,658 Selected=0xE87781F4
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=351,271 Size=1260,658 Split=X
+  DockNode          ID=0x00000003 Parent=0x8B93E3BD SizeRef=198,658 Split=Y Selected=0x318D4478
+    DockNode        ID=0x00000011 Parent=0x00000003 SizeRef=198,380 Selected=0x318D4478
+    DockNode        ID=0x00000012 Parent=0x00000003 SizeRef=198,276 Selected=0x0CA9F5B7
+  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=1060,658 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=809,658 Split=X
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1078,658 Split=Y
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=516,264 Split=X Selected=0xA7A5B14C
+          DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=557,325 Selected=0xA7A5B14C
+          DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=519,325 Selected=0xDA5AA401
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=516,269 Split=X Selected=0xE005CB9C
+          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=549,331 Selected=0xE005CB9C
+          DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=527,331 Selected=0x9AC598FC
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=180,658 Split=Y
+        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=809,176 Selected=0x08AA43A5
+        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=809,480 Split=Y
+          DockNode  ID=0x0000000F Parent=0x0000000E SizeRef=809,446 Selected=0x642CEEBB
+          DockNode  ID=0x00000010 Parent=0x0000000E SizeRef=809,32 CentralNode=1
+    DockNode        ID=0x00000002 Parent=0x0000000C SizeRef=249,658 Selected=0x199AB496
 
